<resources>
    <string name="app_name">UIComponents</string>
    <string name="order_a_coffee">Order A Coffee!</string>
    <string name="your_name">Your Name</string>
    <string name="your_address">Your Address</string>
    <string name="your_phone_no">Phone Number</string>
    <string name="no_of_cup">Total Number of Cup</string>
    <string name="add_extra_sugar">Add Extra Sugar</string>
    <string name="hot_coffee">Hot Coffee</string>
    <string name="cold_coffee">Cold Coffee</string>
    <string name="place_order">Place Order</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="order_coffee">Order Coffee!</string>
    <string name="default_coffee_price">$ 1.50</string>
    <string name="default_coffee_amount">1</string>
    <string name="exit">Exit</string>
    <string name="cart">Cart</string>

    <array name="extra_sugar_option">
        <item>1 Spoon</item>
        <item>2 Spoon</item>
        <item>3 Spoon</item>
        <item>4 Spoon</item>
        <item>5 Spoon</item>
        <item>6 Spoon</item>
    </array>
</resources>
